--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "angular": "^1.6.6",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1"
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
+    "underscore": "^1.8.3"
   },
   "devDependencies": {},
   "scripts": {
