--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "bootstrap": "^3.3.7",
     "jquery": "^3.2.1",
     "lodash": "^4.17.4",
-    "underscore": "^1.8.3"
+    "underscore": "^1.8.3",
+    "angular-ui-router": "^0.4.3"
   },
   "devDependencies": {},
   "scripts": {
